--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,31 @@
-version: 2.0
+version: 2
 jobs:
   build:
     docker:
-      - image: alpine:3.7
+      - image: circleci/node:8.9
     steps:
-      - run:
-          name: The First Step
-          command: |
-            echo 'Hello World!'
-            echo 'This is the delivery pipeline'
+      - checkout
+      - run: npm install
+      - run: CI=true npm run build
+  test:
+    docker:
+      - image: circleci/node:8.9
+    steps:
+      - checkout
+      - run: npm install
+      - run: npm run test
+  hithere:
+    docker:
+      - image: circleci/node:8.9
+    steps:
+      - checkout
+      - run: echo "Hellloooo!"
+workflows:
+  version: 2
+  build-test-and-lint:
+    jobs:
+      - build
+      - hithere
+      - test:
+          requires:
+            - hithere
